[package]
name = "cowmug"
version = "0.0.1"
authors = ["Eduardo Brunaldi dos Santos <eduardo.brunaldi.santos@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/edubrunaldi/cowmug"
keywords = ["cowmug", "iteractive", "command", "line"]
description = """
An inteactive command line user interface.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "sample"

[dependencies]
termion = "1.5.5"
